edit form cteate product

--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -9,15 +9,17 @@
     <title> Dashboard </title>
     <!-- Favicon -->
     <link rel="icon" href="/admin/img/brand/favicon.png" type="image/png">
-    <link  href="/public/dataimg.1639882562822.png" type="image">
+    <link href="/public/dataimg.1639882562822.png" type="image">
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
     <!-- Icons -->
     <link rel="stylesheet" href="/admin/vendor/nucleo/css/nucleo.css" type="text/css">
     <link rel="stylesheet" href="/admin/vendor/@fortawesome/fontawesome-free/css/all.min.css" type="text/css">
-    <!-- Page plugins -->  
-    
+    <!-- Page plugins -->
+
     <!-- Argon CSS -->
+    <link href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet" />
+
     <link rel="stylesheet" href="/admin/css/argon.css?v=1.2.0" type="text/css">
     <link rel="stylesheet" href="/admin/css/argon.css" type="text/css">
     <link rel="stylesheet" href="/admin/css/style.css" type="text/css">
@@ -31,6 +33,7 @@
             {{!-- </div> --}}
         {{> admin/footer}}
     </div>
+
     <script src="/admin/vendor/jquery/dist/jquery.min.js"></script>
     <script src="/admin/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/admin/vendor/js-cookie/js.cookie.js"></script>
@@ -40,9 +43,12 @@
     <script src="/admin/vendor/chart.js/dist/Chart.min.js"></script>
     <script src="/admin/vendor/chart.js/dist/Chart.extension.js"></script>
     <!-- Argon JS -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
+
     <script src="/admin/js/argon.js?v=1.2.0"></script>
-    {{!-- <script src="client/js/main.js"></script> --}}
-    {{!-- <script src="/admin/js/app.js"></script> --}}
+    {{!--
+    <script src="client/js/main.js"></script> --}}
+    <script src="/admin/js/app.js"></script>
 </body>
 
 </html>
