--- a/src/public/admin/css/style.css
+++ b/src/public/admin/css/style.css
@@ -44,7 +44,7 @@
 }
 
 .tab-pane {
-    color: #333;
+    /* color: #333; */
     display: none;
 }
 
@@ -117,7 +117,8 @@
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
-.avatar-upload .avatar-preview>div {
+.avatar-upload .avatar-preview>div,
+.avatar-upload .avatar-preview>img {
     width: 100%;
     height: 100%;
     border-radius: 100%;
@@ -126,6 +127,38 @@
     background-position: center;
 }
 
-.select2-container--default .select2-search--inline .select2-search__field {
-    width: 100% !important;
+select {
+    position: relative;
+}
+
+.placeholder__::before {
+    position: absolute;
+    content: attr(data-content);
+    top: 44px;
+    z-index: 1;
+    color: #8898aa;
+    font-size: 14px;
+    left: 13px;
+}
+
+.select2-multiple-size::-webkit-select-placeholder {
+    color: #8889aa !important;
+}
+
+.select2-selection__placeholder {
+    color: #FF0000;
+}
+
+.form-group.position-relative label {
+    position: relative;
+    z-index: 2;
+    pointer-events: none;
+    bottom: 3px;
+    left: 13px
+}
+
+.form-group.position-relative input:focus+label,
+.form-group.position-relative .selection .select2-selection.select2-selection--multiple:focus+label,
+.form-group.position-relative textarea:focus+label {
+    transform: translateY(-26px);
 }
